--- a/src/translation/ka/translation.json
+++ b/src/translation/ka/translation.json
@@ -137,7 +137,7 @@
     {
       "id": 31,
       "title": "ელ. ფოსტა",
-      "info": "gmadzgarashvili@yahoo.com"
+      "info": "innovationsdemetra@gmail.com"
     },
     {
       "id": 32,
@@ -160,7 +160,9 @@
       "paragraph3": "სიროფის მომზადების პროცესი: შიგა ქვაბში ჩაასხამენ წყალს და აცხელებენ 800C-მდე, უმატებენ შაქარს გამუდმებული მორევით, ერთდროულად ამატებენ ფერმენტულ პრეპარატს და ნარევს აცხელებენ  65-670C-მდე, რის შემდეგ სიროფიან ქვაბს სახურავს აფარებენ და ამ ტემპერატურაზე ინახავენ 24 საათს (ჰიდროლიზის პროცესი). შემდეგ სახურავს მოხდიან ტემპერატურის შენარჩუნებით კიდევ 24 საათს (ჭარბი წყლის აორთქლება). პროცესის ბოლოს ხსნარის კონცენტრაცია აღწევს 76- 77 მას.%-ს. სიროფის თხევად მდგომარეობაში ხანგრძლივად შენარჩუნებისათვის ხსნარის კონცენტრაციას ზრდიან  81-82 მას.%-მდე აორთქლების ზედაპირული ფართობის მრავალჯერადი გაზრდით  (ქვაბის შეუცვლელად). შაქრის დაშლის ხარისხი საწყის ეტაპზე აღწევს 45-50%-ს. შემდგომ (შენახვის შემთხვევაში) ოთახის ტემპერატურაზე ეს მაჩვენებელი იზრდება 80%-მდე და უფრო ზევით, რის შედეგადაც წარმოქმნილი გლუკოზა იწყებს დაკრისტალებას ( თაფლის ანალოგიურად). თუ სურთ სიროფის გალღობა,მას ჩადგამენ ჭურჭელში 60-650-მდე გაცხელებულ წყალში.",
       "paragraph4": "შემოთავაზებული ხერხის უპირატესობანი: სიიაფე (სიროფის თვითღირებულებაში შაქრის ფასი შეადგენს 80-85%-ს); ინვერსიულ სიროფში ჯანმრთელობისათვის მავნე 5-ჰმფ-ს შემცველობა არ აღემატება 5მგ/კგ-ს თაფლისაგან განსხვავებით, რომელიც ამ ნივთიერებას შეიცავს 20 მგ/კგ -ის ოდენობით (უკეთეს შემთხვევაში); ინვერსიული სიროფით ფუტკრის კვება შეიძლება წლის ნებისმიერ დროს, რაც არ იწვევს მუშა ფუტკრის ცვეთას და ოჯახის დასუსტებას; ინვერსიული სიროფის სამრეწველო მასშტაბით წარმოებისათვის საჭირო გამაცხელებელი მუშაობს როგორც გაზზე, ისე ელექტროენერგიით, რაც დამოკიდებულია ენერგიის წყაროს ფასზე.ფერმენტ β -ფრუქტოფურანოზიდაზის წყაროა ჩვენს მიერ შემუშავებული პრეპარატი. ერთეული შეფუთვა საკმარისა 50 კგ მშრალი შაქრის დასამუშავებლად, ხოლო მისი ღირებულება შეადგენს 2,7 $ ტრანსპორტირების გარეშე. გარდა ზემოთმოტანილი ინფორმაციისა, ავტორის მიერ დაინტერესებული მკითხველისათვის ინტერნეტში ქართულ, ინგლისურ და რუსულ ენებზე განთავსებულია მასალები შემდეგი ინოვაციური ღონისძიებების შესახებ: ინვერტაზა (საქარაზა, β -ფრუქტოფურანოზიდაზა) კომერციული სახელწოდებით „ჰიდროლიზ-აგენტი“; თაფლის ნატურალობის დადგენა (ექსპრესული მეთოდით);  კანდი- ცომისებური საკვებიფუტკრისათვის;  ჭეოს ეკოლოგიურად სუფთა პროდუქტის წარმოება სკის (ფიჭები) გარეშე;  მურაბებისა და ხილფაფების წარმოების ეკოლოგიურად უსაფრთხო ტექნოლოგია;  ჩურჩხლის-ქართული დელიკატესის- მომზადების გაუმჯობესებული ხერხი.",
       "img1": "../../images/invertSugar1.png",
-      "img2": "../../images/invertSugar.png"
+      "img2": "../../images/invertSugar.png",
+      "alt1": "hidroliz agent",
+      "alt2": "invert sugar"
     },
     {
       "id": 35,
@@ -174,7 +176,9 @@
       "img1": "../../images/invertase.jpg",
       "img2": "../../images/rotaryMixer.png",
       "caption1": "ჰიდროლიზ-აგენტი",
-      "caption2": "როტაციული ამრევი"
+      "caption2": "როტაციული ამრევი",
+      "alt1": "Invertase",
+      "alt2": "Rotary mixer"
     },
     {
       "id": 36,
@@ -188,7 +192,9 @@
       "img1": "../../images/reagents.png",
       "img2": "../../images/honeyNat.png",
       "caption1": "რეაგენტები თაფლის ანალიზისათვის",
-      "caption2": "ანალიზის შედეგები: თაფლის (1), ნარევი პროდუქტის (2), ინვერსიული სიროფისა(3) და სასურსათო შაქრის (4)."
+      "caption2": "ანალიზის შედეგები: თაფლის (1), ნარევი პროდუქტის (2), ინვერსიული სიროფისა(3) და სასურსათო შაქრის (4).",
+      "alt1": "Reagents for honey analysis",
+      "alt2": "Results of analysis"
     },
     {
       "id": 37,
@@ -203,7 +209,9 @@
       "img1": "../../images/candy.jpg",
       "img2": "../../images/candyAdditions.png",
       "caption1": "კანდი  მარტივი შაქრებისაგან",
-      "caption2": "კანდი დანამატებით"
+      "caption2": "კანდი დანამატებით",
+      "alt1": "Candy of  monosacharides",
+      "alt2": "Candy with additions"
     },
     {
       "id": 38,
@@ -223,7 +231,12 @@
       "caption2": "ჭეო",
       "caption3": "",
       "caption4": "ვაკუუმკამერა ტუმბოსთან ერთად",
-      "caption5": ""
+      "caption5": "",
+      "alt1": "Bee Pollen",
+      "alt2": "Bee Bread",
+      "alt3": "beepollen dryer",
+      "alt4": "Candy with additions",
+      "alt5": "Candy of  monosacharides"
     },
     {
       "id": 39,
@@ -245,7 +258,13 @@
       "caption3": "მურაბა: მსხალი",
       "caption4": "მურაბა: ვაშლი",
       "caption5": "მურაბა: ხენდროს ნახევრადმშრალი",
-      "caption6": "მურაბა: კომშის ნახევრადმშრალი"
+      "caption6": "მურაბა: კომშის ნახევრადმშრალი",
+      "alt1": "Cherry jam ",
+      "alt2": "peachy jam",
+      "alt3": "pear jam",
+      "alt4": "apple jam",
+      "alt5": "Semi-dry Khendra",
+      "alt6": "Semi-dry Quince"
     },
 
     {
@@ -264,7 +283,11 @@
       "caption1": "ყურძნის ბადაგის კონცენტრირებული (78,5-81მას.%) ნიმუშები:  2-ახალი ტექნოლოგიით მიღებული,  3-დაჟანგული (ფერშეცვლილი)",
       "caption2": "ტრადიციული ტექნოლოგიით მიღებული  (დადებითი)",
       "caption3": "ახალი ტექნოლოგიით დამზადებული  (უარყოფითი)",
-      "caption4": "ა)ტრადიციული  ტექნოლოგიით დამზადებული ჩურჩხელა; ბ)ახალი ტექნოლოგიით მომზადებული ნიმუში "
+      "caption4": "ა)ტრადიციული  ტექნოლოგიით დამზადებული ჩურჩხელა; ბ)ახალი ტექნოლოგიით მომზადებული ნიმუში ",
+      "alt1": "Cherry jam ",
+      "alt2": "traditional technology ",
+      "alt3": "new technology",
+      "alt4": "Churchkhela"
     }
   ]
 }
