--- a/src/translation/ru/translation.json
+++ b/src/translation/ru/translation.json
@@ -140,7 +140,7 @@
     {
       "id": 31,
       "title": "Зл. почта",
-      "info": "gmadzgarashvili@yahoo.com"
+      "info": "innovationsdemetra@gmail.com"
     },
     {
       "id": 32,
@@ -163,7 +163,9 @@
       "paragraph3": "Процесс приготовления. Во внутренний котел заливают воду нагревая ее до 800C, прибавляют сахар при непрерывном  перемешивании до полного растворения, вводят также сразу ферментный препарат  и температуру повышают до 650C,  после чего внутренний котел закрывают крышкой,  температуру выдерживают в пределах  65 ± 20С в  течение  суток,  далее крышку внутреннего котла удаляют и при сохранении вышеназванной температуры раствор оставляют на вторые сутки для удаления лишней влаги  ( до концентрации 76-77 мас. %).  Если требуется  сохранить раствор на длительное время,  ее концентрацию доводят до 81-82 мас. % путем многократного увеличения поверхностной площади испарения в том же котле,  что исключает возможность брожения сиропа.В конце первого периода приготовления степень гидролиза сахара достигает 45-50% от общего его количества,  но при хранении при комнатной температуре этот показатель повышается до 80% и более и образовавшаяся глюкоза начинает кристаллизоваться (наподобие меда).  При необходимости  иметь сироп в растворенном виде посуду с таким сиропом помещают в нагретую до 60-650   воду.",
       "paragraph4": "Преимущества  данного cпособа: дешевизна (в себестоимости сиропа пищевой сахар составляет  не менее 80-85%); в инвертном сиропе содержание 5-гидроксиметилфурфураля не превышает 5мг/кг,  в отличие от меда, в котором данный показатель составляет не менее 20 мг/ кг (в лучшем случае); инвертный сироп можно скармливать пчелам в любой сезон года,  не вызывая износ рабочих пчел; для промышленного производства сиропа нагрев разработанной нами установки  производится  как газом,  так и электроэнергией,  в зависимости от стоимости источника; источник β -фруктофуранозидазы представлен разработанным автором препаратом микробного происхождения, одна упаковка которого рассчитана на 50 кг сухого сахара,  а стоимость без транспортировки равна 2, 7$.Помимо вышеописанной информации автор для заинтересованных читателей на грузинском,  английском и русском языках в интернете разместил материалы о следующих инновационных мероприятиях:  Инвертаза (сахараза,   β -фруктофуранозидаза) с коммерческим названием “гидролиз- агент”;  натуральность меда – установление экспрессным методом;  канди – тестообразная подкормка;  перга – производство экологически чистого продукта вне улья (соторамок);  варенья и повидла-технология производства экологически чистой продукции;  чурчхела – грузинский деликатес – улучшенный способ приготовления.",
       "img1": "../../images/invertSugar1.png",
-      "img2": "../../images/invertSugar.png"
+      "img2": "../../images/invertSugar.png",
+      "alt1": "hidroliz agent",
+      "alt2": "invert sugar"
     },
     {
       "id": 35,
@@ -177,7 +179,9 @@
       "img1": "../../images/invertase.jpg",
       "img2": "../../images/rotaryMixer.png",
       "caption1": "Гидролизирующий агент",
-      "caption2": "ротационный миксер"
+      "caption2": "ротационный миксер",
+      "alt1": "Invertase",
+      "alt2": "Rotary mixer"
     },
     {
       "id": 36,
@@ -191,7 +195,9 @@
       "img1": "../../images/reagents.png",
       "img2": "../../images/honeyNat.png",
       "caption1": "Реагенты для анализа меда",
-      "caption2": "Рeзультаты анализа  меда(1),  смешанного продукта(2),  инверта(3) и сахара (4)."
+      "caption2": "Рeзультаты анализа  меда(1),  смешанного продукта(2),  инверта(3) и сахара (4).",
+      "alt1": "Reagents for honey analysis",
+      "alt2": "Results of analysis"
     },
     {
       "id": 37,
@@ -206,7 +212,9 @@
       "img1": "../../images/candy.jpg",
       "img2": "../../images/candyAdditions.png",
       "caption1": "Канди из моносахаридов",
-      "caption2": " Канди с добавками"
+      "caption2": " Канди с добавками",
+      "alt1": "Candy of  monosacharides",
+      "alt2": "Candy with additions"
     },
     {
       "id": 38,
@@ -226,7 +234,12 @@
       "caption2": " Перга",
       "caption3": "",
       "caption4": " Вакуум камера  с насосом",
-      "caption5": ""
+      "caption5": "",
+      "alt1": "Bee Pollen",
+      "alt2": "Bee Bread",
+      "alt3": "beepollen dryer",
+      "alt4": "Candy with additions",
+      "alt5": "Candy of  monosacharides"
     },
     {
       "id": 39,
@@ -249,7 +262,13 @@
       "caption3": "Джемы: грушевые",
       "caption4": "Джемы: яблочные",
       "caption5": "Джемы: кендро ",
-      "caption6": "Джемы: айвы"
+      "caption6": "Джемы: айвы",
+      "alt1": "Cherry jam ",
+      "alt2": "peachy jam",
+      "alt3": "pear jam",
+      "alt4": "apple jam",
+      "alt5": "Semi-dry Khendra",
+      "alt6": "Semi-dry Quince"
     },
 
     {
@@ -268,7 +287,11 @@
       "caption1": "Концентрированные (78,5-81% по массе) пробы виноградного сусла: 2-новой технологии, 3-оксидированные (обесцвеченные)",
       "caption2": "Получено по традиционной технологии (положительный)",
       "caption3": "Сделано по новой технологии (негатив)",
-      "caption4": "чурчхела выполненная по традиционной технологии; б) Образей, приготовленный по новой технологии."
+      "caption4": "чурчхела выполненная по традиционной технологии; б) Образей, приготовленный по новой технологии.",
+      "alt1": "Cherry jam ",
+      "alt2": "traditional technology ",
+      "alt3": "new technology",
+      "alt4": "Churchkhela"
     }
   ]
 }
