add search in dif languages

--- a/src/translation/en/translation.json
+++ b/src/translation/en/translation.json
@@ -5,6 +5,7 @@
   "innovations": "Innovations",
   "contact": "Contact",
   "sectionName": "Innovations",
+  "search": "Search",
   "dropDown": [
     {
       "id": 13,
