--- a/src/translation/ka/translation.json
+++ b/src/translation/ka/translation.json
@@ -5,6 +5,7 @@
   "innovations": "ინოვაციები",
   "contact": "კონტაქტი",
   "sectionName": "ინოვაციები",
+  "search": "ძიება",
   "dropDown": [
     {
       "id": 13,
