--- a/src/translation/ru/translation.json
+++ b/src/translation/ru/translation.json
@@ -5,6 +5,7 @@
   "innovations": "Инновации",
   "contact": "Контакт",
   "sectionName": "Инновации",
+  "search": "Поиск",
   "dropDown": [
     {
       "id": 13,
